@@ -1,3 +1,3 @@
 [wine]
 preset=true
-components="fontsmooth-rgb allfonts vcrun2005sp1 msxml6"
+components="allfonts vcrun2005sp1 msxml6"
